--- a/templates/Dados.html
+++ b/templates/Dados.html
@@ -10,6 +10,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
   <style>
+    .navbar{
+      display: flex;
+      flex-direction: row;
+    }
+    .navbar-nav{
+      display: flex;
+      flex-direction: row;
+    }
     body {
       text-align: center;
       color: rgb(0, 0, 0);
@@ -26,30 +34,39 @@
       margin: 10px;
       width: 20%; /* Adjust the width as needed */
     }
+    .container{
+      width:80vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
   </style>
 </head>
-
-<body>
-
+<header>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="https://www.gov.br/museugoeldi/pt-br">Museu Emilio Goeldi</a>
       </div>
       <ul class="nav navbar-nav">
-       <li><a href="/cadastro">Cadastro</a></li>
-        <li class="active"><a href="/dados">Dados</a></li>
-        <li><a href="/mapaDensidade">Mapa Densidade</a></li>
+          <li class="active"><a href="/">Dados</a></li>
+          <li><a href="/cadastro">Cadastro</a></li>
       </ul>
     </div>
   </nav>
+</header>
+
+<body>
 
   <div class="col-xs-12 text-center">
     <h2>Graficos</h2>
   </div>
-
-  <div class="chart-container" style="height: 50vh;width: 50vw;" id="CidadesGrafico"></div>
+  <div class="container">
+  <div class="chart-container" style="height: 50vh;width: 50vw;"  id="CidadesGrafico"></div>
   <div class="chart-container" style="height: 50vh;width: 50vw;" id="EspeciesGrafico"></div>
+</div>
 
   <div id="cidades" style="display: none">
       {{ Cidades }}
@@ -75,10 +92,16 @@
         columns:arrayGrafico,
         type: "bar",
       },
+  bar: {
+      width: {
+      ratio: 0.9,
+      max: 30
+    }
+  },
       bindto: "#CidadesGrafico",
             legend: {
     show: true,
-    position: "right"
+    position: "left"
 },
     });
     } catch (error) {
@@ -95,7 +118,7 @@
         console.log(arrayGrafico);
         var graficoCidades = bb.generate({
             title: {
-    text: "Especies com maiores ocorrencias"
+    text: "Especies com maiores números de ocorrencias"
     },
       data: {
         columns:arrayGrafico,
